--- a/moviedb/templates/anime.html
+++ b/moviedb/templates/anime.html
@@ -424,9 +424,9 @@
             <div class="movie">
                 <img src="{{ anime.images.jpg.image_url }}" alt="{{ anime.title }}">
                 <div class="movie-info">
-
-                    <h3>{{ anime.title }}</h3>
-                    <p>{{ anime.aired.from|date:"Y" }}</p>
+                <h2>{{ anime.title }}</h2>
+                <p>{{ anime.synopsis|truncatewords:20 }}</p>
+                <p><strong>Score:</strong> {{ anime.score }}</p>
                 </div>
             </div>
             {% endfor %}
@@ -443,8 +443,9 @@
             <div class="movie">
                 <img src="{{ anime.images.jpg.image_url }}" alt="{{ anime.title }}">
                 <div class="movie-info">
-                    <h3>{{ anime.title }}</h3>
-                    <p>{{ anime.aired.from|date:"Y" }}</p>
+                <h2>{{ anime.title }}</h2>
+                <p>{{ anime.synopsis|truncatewords:20 }}</p>
+                <p><strong>Score:</strong> {{ anime.score }}</p>
                 </div>
             </div>
             {% endfor %}
@@ -457,8 +458,9 @@
             <div class="movie">
                 <img src="{{ anime.images.jpg.image_url }}" alt="{{ anime.title }}">
                 <div class="movie-info">
-                    <h3>{{ anime.title }}</h3>
-                    <p>{{ anime.aired.from|date:"Y" }}</p>
+                <h2>{{ anime.title }}</h2>
+                <p>{{ anime.synopsis|truncatewords:20 }}</p>
+                <p><strong>Score:</strong> {{ anime.score }}</p>
                 </div>
             </div>
             {% endfor %}
@@ -471,8 +473,9 @@
             <div class="movie">
                 <img src="{{ anime.images.jpg.image_url }}" alt="{{ anime.title }}">
                 <div class="movie-info">
-                    <h3>{{ anime.title }}</h3>
-                    <p>{{ anime.aired.from|date:"Y" }}</p>
+                <h2>{{ anime.title }}</h2>
+                <p>{{ anime.synopsis|truncatewords:20 }}</p>
+                <p><strong>Score:</strong> {{ anime.score }}</p>
                 </div>
             </div>
             {% endfor %}
@@ -487,8 +490,9 @@
             <div class="movie">
                 <img src="{{ anime.images.jpg.image_url }}" alt="{{ anime.title }}">
                 <div class="movie-info">
-                    <h3>{{ anime.title }}</h3>
-                    <p>{{ anime.aired.from|date:"Y" }}</p>
+                <h2>{{ anime.title }}</h2>
+                <p>{{ anime.synopsis|truncatewords:20 }}</p>
+                <p><strong>Score:</strong> {{ anime.score }}</p>
                 </div>
             </div>
             {% endfor %}
@@ -501,8 +505,9 @@
             <div class="movie">
                 <img src="{{ anime.images.jpg.image_url }}" alt="{{ anime.title }}">
                 <div class="movie-info">
-                    <h3>{{ anime.title }}</h3>
-                    <p>{{ anime.aired.from|date:"Y" }}</p>
+                <h2>{{ anime.title }}</h2>
+                <p>{{ anime.synopsis|truncatewords:20 }}</p>
+                <p><strong>Score:</strong> {{ anime.score }}</p>
                 </div>
             </div>
             {% endfor %}
@@ -515,8 +520,9 @@
             <div class="movie">
                 <img src="{{ anime.images.jpg.image_url }}" alt="{{ anime.title }}">
                 <div class="movie-info">
-                    <h3>{{ anime.title }}</h3>
-                    <p>{{ anime.aired.from|date:"Y" }}</p>
+                <h2>{{ anime.title }}</h2>
+                <p>{{ anime.synopsis|truncatewords:20 }}</p>
+                <p><strong>Score:</strong> {{ anime.score }}</p>
                 </div>
             </div>
             {% endfor %}
@@ -529,8 +535,9 @@
             <div class="movie">
                 <img src="{{ anime.images.jpg.image_url }}" alt="{{ anime.title }}">
                 <div class="movie-info">
-                    <h3>{{ anime.title }}</h3>
-                    <p>{{ anime.aired.from|date:"Y" }}</p>
+                <h2>{{ anime.title }}</h2>
+                <p>{{ anime.synopsis|truncatewords:20 }}</p>
+                <p><strong>Score:</strong> {{ anime.score }}</p>
                 </div>
             </div>
             {% endfor %}
@@ -544,9 +551,9 @@
             {% for anime in animes_list %}
             <div class="movie">
                 <img src="{{ anime.images.jpg.image_url }}" alt="{{ anime.title }}">
-                <div class="movie-info">
-                    <h3>{{ anime.title }}</h3>
-                    <p>{{ anime.aired.from|date:"Y" }}</p>
+                <div class="movie-info"><h2>{{ anime.title }}</h2>
+                <p>{{ anime.synopsis|truncatewords:20 }}</p>
+                <p><strong>Score:</strong> {{ anime.score }}</p>
                 </div>
             </div>
             {% endfor %}
