--- a/moviedb/templates/anime_list.html
+++ b/moviedb/templates/anime_list.html
@@ -92,6 +92,7 @@
                 <h2>{{ anime.title }}</h2>
                 <p>{{ anime.synopsis|truncatewords:20 }}</p>
                 <p><strong>Score:</strong> {{ anime.score }}</p>
+                <a href="{% url 'anime_details' pk=anime.mal_id %}">View Details</a>
             </div>
         {% endfor %}
     </div>
