--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -430,7 +430,7 @@ header {
             var videoId = '{{ movie.tmdb_id }}';
            
             // Construct the download URL for vidsrc.vip using the TMDB ID
-            var downloadUrl = 'https://dl.vidsrc.vip/movie/' + videoId;
+            var downloadUrl = 'https://dl.vidsrc.vip/tv/' + videoId;
     
             // Create a temporary link element to trigger the download
             var link = document.createElement('a');
