--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -423,26 +423,33 @@ header {
         {% endif %}
     </div>
     <script>
-        document.getElementById('download').addEventListener('click', function(e) {
-            e.preventDefault();
-       
-            // Assuming movie.tmdb_id is already passed to the template context and is available here
-            var videoId = '{{ movie.tmdb_id }}';
-           
-            // Construct the download URL for vidsrc.vip using the TMDB ID
-            var downloadUrl = 'https://dl.vidsrc.vip/tv/' + videoId;
+        // Attach the event listener to all download buttons
+        document.querySelectorAll('.download-button').forEach(function(button) {
+            button.addEventListener('click', function(e) {
+                e.preventDefault();
     
-            // Create a temporary link element to trigger the download
-            var link = document.createElement('a');
-            link.href = downloadUrl;
-            link.target = '_blank'; // Open in a new tab
-            link.download = ''; // Leave this empty since the file name is determined by the server
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
+                // Get the season and episode number from the button's data attributes
+                var seasonNumber = this.getAttribute('data-season');
+                var episodeNumber = this.getAttribute('data-episode');
     
-            // Inform the user about possible manual download steps
-            alert('If the download did not start automatically, please right-click on the video player in the new tab and select "Save video as" or use a video downloader extension in your browser.');
+                // Assuming the TMDB ID is already passed to the template context and is available here
+                var videoId = '{{ serie.tmdb_id }}';
+    
+                // Construct the download URL for vidsrc.vip using the TMDB ID, season, and episode
+                var downloadUrl = 'https://dl.vidsrc.vip/tv/' + videoId + '/season/' + seasonNumber + '/episode/' + episodeNumber;
+    
+                // Create a temporary link element to trigger the download
+                var link = document.createElement('a');
+                link.href = downloadUrl;
+                link.target = '_blank'; // Open in a new tab
+                link.download = ''; // Leave this empty since the file name is determined by the server
+                document.body.appendChild(link);
+                link.click();
+                document.body.removeChild(link);
+    
+                // Inform the user about possible manual download steps
+                alert('If the download did not start automatically, please right-click on the video player in the new tab and select "Save video as" or use a video downloader extension in your browser.');
+            });
         });
     </script>
     <script>
