--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -405,7 +405,7 @@ header {
                                     <p class="episode-info">Air Date: {{ episode.airdate }}</p>
                                     <p class="episode-info">Rating: {{ episode.vote_average }} / 10</p>
                                     <a href="#" class="watch-button" data-season="{{ season_data.season.number }}" data-episode="{{ episode.number }}">Watch Episode</a>
-                                    <a href="#" class="download-button" id="download">Download</a>
+                                    <a href="#" class="download-button" id="download"cdata-season="{{ season_data.season.number }}" data-episode="{{ episode.number }}">Download</a>
                                 </div>
                             {% endfor %}
                         </div>
