--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -212,6 +212,24 @@ header {
     color: #fff;
 }
 
+/* iframe container */
+.movie-player {
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 aspect ratio */
+    position: relative;
+    background-color: #000;
+}
+
+.movie-player iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+
 /* Responsive styles */
 @media screen and (max-width: 1024px) {
     .container {
@@ -382,7 +400,7 @@ header {
         
         <!-- Embed Movie -->
         {% if movie.tmdb_id or movie.imdb_id %}
-            <div style="margin-bottom: 40px;">
+            <div class="movie-player">
                 {% if movie.tmdb_id %}
                     <iframe src="https://multiembed.mov/directstream.php?video_id={{ movie.tmdb_id }}&tmdb=1" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
                 {% elif movie.imdb_id %}
