--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -402,9 +402,9 @@ header {
         {% if movie.tmdb_id or movie.imdb_id %}
             <div class="movie-player">
                 {% if movie.tmdb_id %}
-                    <iframe src="https://multiembed.mov/directstream.php?video_id={{ movie.tmdb_id }}&tmdb=1" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://multiembed.mov/directstream.php?video_id={{ movie.tmdb_id }}&tmdb=1" allowfullscreen></iframe>
                 {% elif movie.imdb_id %}
-                    <iframe src="https://multiembed.mov/directstream.php?video_id=tt{{ movie.imdb_id }}" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://multiembed.mov/directstream.php?video_id=tt{{ movie.imdb_id }}" allowfullscreen></iframe>
                 {% endif %}
             </div>
         {% endif %}
