--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -95,28 +95,36 @@ header {
 /* Movie details container */
 .movie-details-container {
     position: relative;
-    margin-bottom: 40px;
-    padding-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio for background */
+    overflow: hidden;
 }
 
 /* Large background poster */
 .background-poster {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 400px;
+    height: 100%;
     background-size: cover;
     background-position: center;
     filter: brightness(0.3);
-    border-radius: 8px;
+}
+
+/* Content wrapper */
+.content-wrapper {
+    position: relative;
+    z-index: 2;
+    padding: 40px;
+    display: flex;
+    align-items: flex-start;
 }
 
 /* Smaller foreground poster */
 .movie-poster {
-    position: absolute;
-    width: 220px;
-    left: 40px;
-    top: 50%;
-    transform: translateY(-25%);
-    z-index: 2;
+    flex: 0 0 220px;
+    margin-right: 40px;
 }
 
 .movie-poster img {
@@ -127,13 +135,7 @@ header {
 
 /* Movie details content */
 .movie-details-content {
-    position: absolute;
-    margin-top: 100px;
-    left: 300px;
-    right: 40px;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 2;
+    flex: 1;
     color: #fff;
 }
 
@@ -147,7 +149,6 @@ header {
     font-size: 1.1rem;
     line-height: 1.5;
 }
-
 /* Watch and Download buttons */
 .watch-button, .download-button {
     display: inline-block;
@@ -218,6 +219,7 @@ header {
     padding-top: 56.25%; /* 16:9 aspect ratio */
     position: relative;
     background-color: #000;
+    margin-top: 20px;
 }
 
 .movie-player iframe {
@@ -228,6 +230,7 @@ header {
     height: 100%;
     border: none;
 }
+
 
 
 /* Responsive styles */
