--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -95,36 +95,28 @@ header {
 /* Movie details container */
 .movie-details-container {
     position: relative;
-    margin-bottom: 20px;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio for background */
-    overflow: hidden;
+    margin-bottom: 40px;
+    padding-top: 20px;
 }
 
 /* Large background poster */
 .background-poster {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
+    height: 400px;
     background-size: cover;
     background-position: center;
     filter: brightness(0.3);
-}
-
-/* Content wrapper */
-.content-wrapper {
-    position: relative;
-    z-index: 2;
-    padding: 40px;
-    display: flex;
-    align-items: flex-start;
+    border-radius: 8px;
 }
 
 /* Smaller foreground poster */
 .movie-poster {
-    flex: 0 0 220px;
-    margin-right: 40px;
+    position: absolute;
+    width: 220px;
+    left: 40px;
+    top: 50%;
+    transform: translateY(-25%);
+    z-index: 2;
 }
 
 .movie-poster img {
@@ -135,7 +127,13 @@ header {
 
 /* Movie details content */
 .movie-details-content {
-    flex: 1;
+    position: absolute;
+    margin-top: 100px;
+    left: 300px;
+    right: 40px;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 2;
     color: #fff;
 }
 
@@ -149,6 +147,7 @@ header {
     font-size: 1.1rem;
     line-height: 1.5;
 }
+
 /* Watch and Download buttons */
 .watch-button, .download-button {
     display: inline-block;
@@ -219,7 +218,6 @@ header {
     padding-top: 56.25%; /* 16:9 aspect ratio */
     position: relative;
     background-color: #000;
-    margin-top: 20px;
 }
 
 .movie-player iframe {
@@ -230,7 +228,6 @@ header {
     height: 100%;
     border: none;
 }
-
 
 
 /* Responsive styles */
