--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -115,7 +115,7 @@ header {
     width: 220px;
     left: 40px;
     top: 50%;
-    transform: translateY(-25%);
+    transform: translateY(-10%);
     z-index: 2;
 }
 
@@ -131,7 +131,7 @@ header {
     left: 300px;
     right: 40px;
     top: 50%;
-    transform: translateY(-15%);
+    transform: translateY(-10%);
     z-index: 2;
     color: #fff;
 }
@@ -221,7 +221,7 @@ header {
 
 .movie-player iframe {
     position: absolute;
-    top: 0;
+    top: 70%%;
     left: 0;
     width: 100%;
     height: 100%;
