--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -97,6 +97,8 @@ header {
     position: relative;
     margin-bottom: 40px;
     padding-top: 20px;
+    padding-bottom: 200px;
+    min-height: 600px;
 }
 
 /* Large background poster */
@@ -114,8 +116,8 @@ header {
     position: absolute;
     width: 220px;
     left: 40px;
-    top: 50%;
-    transform: translateY(-10%);
+    top: 35%;
+    transform: translateY(-50%);
     z-index: 2;
 }
 
@@ -130,8 +132,8 @@ header {
     position: absolute;
     left: 300px;
     right: 40px;
-    top: 50%;
-    transform: translateY(-10%);
+    top: 35%;
+    transform: translateY(-50%);
     z-index: 2;
     color: #fff;
 }
@@ -221,7 +223,7 @@ header {
 
 .movie-player iframe {
     position: absolute;
-    top: 70%%;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
