--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -97,7 +97,8 @@ header {
     position: relative;
     margin-bottom: 40px;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 200px;
+    min-height: 600px;
 }
 
 /* Large background poster */
