--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -116,7 +116,8 @@ header {
     position: absolute;
     width: 220px;
     left: 40px;
-    
+    top: 90%;
+    transform: translateY(-50%);
     z-index: 2;
 }
 
@@ -131,7 +132,8 @@ header {
     position: absolute;
     left: 300px;
     right: 40px;
-    
+    top: 90%;
+    transform: translateY(-50%);
     z-index: 2;
     color: #fff;
 }
