--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -900,9 +900,9 @@ header {
             <div class="footer-contact">
                 <h3>Contact Us</h3>
                 <ul>
-                    <li>Email: <a href="mailto:support@yourwebsite.com">support@yourwebsite.com</a></li>
-                    <li>Phone: <a href="tel:+123456789">+1 234 567 89</a></li>
-                    <li>Address: 123 Movie Lane, Film City, USA</li>
+                    <li>Email: <a href="mailto:support@yourwebsite.com">ogollawayne@.com</a></li>
+                    <li>Phone: <a href="tel:+123456789">+254 758 292 353</a></li>
+                    <li>Address: Migosi, Kisumu City, Kenya</li>
                 </ul>
             </div>
             <div class="footer-social">
@@ -916,7 +916,8 @@ header {
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Your Website Name. All rights reserved.</p>
+            <p>&copy; 2024 Ease-E-Movies. All rights reserved.</p>
+            <p>Created By Wayne Ryan</p>
         </div>
     </footer>
     
