--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wayne's Movie Site</title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
    /* Reset and basic styles */
 body, html {
@@ -900,7 +900,7 @@ header {
             <div class="footer-contact">
                 <h3>Contact Us</h3>
                 <ul>
-                    <li>Email: <a href="mailto:support@yourwebsite.com">ogollawayne@.com</a></li>
+                    <li>Email: <a href="mailto:support@yourwebsite.com">ogollawayne@gmail.com</a></li>
                     <li>Phone: <a href="tel:+123456789">+254 758 292 353</a></li>
                     <li>Address: Migosi, Kisumu City, Kenya</li>
                 </ul>
