--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -916,7 +916,7 @@ header {
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Ease-E-Movies. All rights reserved.</p>
+            <p>&copy; 2024 Ease-E-Movies. All rights reserved.</p><br>
             <p>Created By Wayne Ryan</p>
         </div>
     </footer>
