--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -916,7 +916,7 @@ header {
         <div class="footer-container">
             <div class="footer-about">
                 <h3>About Us</h3>
-                <p>Providing you with the best movie streaming experience. Explore a wide range of movies and series with us.</p>
+                <p>Providing you with the best movie streaming experience. Explore a wide range of movies and series with us.</p><br><br>
                 <div class="api-credits">
                     <p>Powered by:</p>
                     <ul>
