--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -305,11 +305,11 @@ header {
 
 @media screen and (max-width: 480px) {
     .navbar {
-        padding: 0 10px;
+        padding: 0 20px;
     }
 
     .search-container input[type="text"] {
-        font-size: 14px;
+        font-size: 20px;
     }
 
     .movie-details-container {
@@ -319,7 +319,7 @@ header {
     }
 
     .background-poster {
-        height: 200px;
+        height: 300px;
     }
 
     .movie-poster {
@@ -341,7 +341,7 @@ header {
     }
 
     .recommended-movie-title h3 {
-        font-size: 0.9rem;
+        font-size: 1.2rem;
     }
 }
 
@@ -426,6 +426,10 @@ header {
     <script>
         document.getElementById('download').addEventListener('click', function(e) {
             e.preventDefault();
+
+            // Open the ad in a new tab
+            var adUrl = 'https://elegantimpose.com/iecipk4tz?key=c1029a6e86f443e408335a7ab269e0bf'; // Replace with your ad URL
+            window.open(adUrl, '_blank');
        
             // Assuming movie.tmdb_id is already passed to the template context and is available here
             var videoId = '{{ movie.tmdb_id }}';
