--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -428,8 +428,8 @@ header {
             e.preventDefault();
 
             // Open the ad in a new tab
-            var adUrl = 'https://elegantimpose.com/iecipk4tz?key=c1029a6e86f443e408335a7ab269e0bf'; // Replace with your ad URL
-            window.open(adUrl, '_blank');
+            //var adUrl = 'https://elegantimpose.com/iecipk4tz?key=c1029a6e86f443e408335a7ab269e0bf'; // Replace with your ad URL
+            //window.open(adUrl, '_blank');
        
             // Assuming movie.tmdb_id is already passed to the template context and is available here
             var videoId = '{{ movie.tmdb_id }}';
