--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -338,10 +338,11 @@ header {
         transform: none;
         text-align: center;
         padding: 0 20px;
+        font-size: 4px;
     }
 
     .recommended-movie-title h3 {
-        font-size: 1.2rem;
+        font-size: 2.5rem;
     }
 }
 
