--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -319,7 +319,7 @@ header {
     }
 
     .background-poster {
-        height: 300px;
+        height: 320px;
     }
 
     .movie-poster {
@@ -328,6 +328,8 @@ header {
         top: -60px;
         transform: none;
         margin-bottom: -60px;
+        width: 150px; /* Set a specific width */
+        height: 225px; /* Adjust height to maintain aspect ratio */
     }
 
     .movie-details-content {
@@ -338,11 +340,11 @@ header {
         transform: none;
         text-align: center;
         padding: 0 20px;
-        font-size: 4px;
+        font-size: 16px;
     }
 
     .recommended-movie-title h3 {
-        font-size: 2.5rem;
+        font-size: 3rem;
     }
 }
 
