--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -408,7 +408,7 @@ header {
             <!-- Embed Series -->
             {% if serie.id %}
                 <div style="margin-bottom: 40px;">
-                    <iframe src="https://multiembed.mov/?video_id={{ serie.tmdb_id }}&tmdb=1&tv=1" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://multiembed.mov/directstream.php?video_id={{ serie.tmdb_id }}&tmdb=1&tv=1" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
                 </div>
             {% endif %}
         </div>
