--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -276,11 +276,12 @@ header {
     }
 
     .background-poster {
-        height: 300px;
+        height: 350px;
     }
 
     .movie-poster {
         width: 160px;
+        height: 235px; /* Adjust height to maintain aspect ratio */
         left: 20px;
     }
 
@@ -290,16 +291,16 @@ header {
     }
 
     .movie-details-content h2 {
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
     .movie-details-content p {
-        font-size: 1rem;
+        font-size: 2.5rem;
     }
 
     .watch-button, .download-button {
-        font-size: 1rem;
-        padding: 10px 20px;
+        font-size: 2rem;
+        padding: 15px 25px;
     }
 }
 
