--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -9,7 +9,8 @@
      crossorigin="anonymous"></script>
      <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
     <style>
-    /* Reset and basic styles */
+        /* Reset and basic styles */
+/* Reset and basic styles */
 body, html {
     margin: 0;
     padding: 0;
@@ -96,6 +97,7 @@ header {
     position: relative;
     margin-bottom: 40px;
     padding-top: 20px;
+    
 }
 
 /* Large background poster */
@@ -227,6 +229,7 @@ header {
     border: none;
 }
 
+
 /* Responsive styles */
 @media screen and (max-width: 1024px) {
     .container {
@@ -288,41 +291,32 @@ header {
     }
 
     .movie-details-content h2 {
-        font-size: 2rem; /* Adjusted to better fit smaller screens */
+        font-size: 3rem;
     }
 
     .movie-details-content p {
-        font-size: 1.5rem; /* Adjusted for readability */
+        font-size: 2.5rem;
     }
 
     .watch-button, .download-button {
-        font-size: 1.5rem; /* Adjusted for better visibility */
-        padding: 12px 20px;
+        font-size: 2rem;
+        padding: 15px 25px;
     }
 }
 
 @media screen and (max-width: 480px) {
     .navbar {
         padding: 0 20px;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .search-container {
-        width: 100%;
-        margin-top: 10px;
     }
 
     .search-container input[type="text"] {
-        font-size: 18px; /* Adjusted for better readability */
-        width: 100%;
+        font-size: 20px;
     }
 
     .movie-details-container {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-top: 40px;
     }
 
     .background-poster {
@@ -332,10 +326,10 @@ header {
     .movie-poster {
         position: relative;
         left: auto;
-        top: -50px;
+        top: -60px;
         transform: none;
-        margin-bottom: -50px;
-        width: 150px;
+        margin-bottom: -60px;
+        width: 150px; /* Set a specific width */
         height: 225px; /* Adjust height to maintain aspect ratio */
     }
 
@@ -347,24 +341,11 @@ header {
         transform: none;
         text-align: center;
         padding: 0 20px;
-        font-size: 14px; /* Adjusted for readability */
-    }
-
-    .movie-details-content h2 {
-        font-size: 1.5rem; /* Adjusted for smaller screens */
-    }
-
-    .movie-details-content p {
-        font-size: 1rem; /* Adjusted for readability */
+        font-size: 16px;
     }
 
     .recommended-movie-title h3 {
-        font-size: 1.2rem; /* Adjusted for better readability */
-    }
-
-    .watch-button, .download-button {
-        font-size: 1.2rem;
-        padding: 10px 18px;
+        font-size: 3rem;
     }
 }
 
